--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -50,7 +50,7 @@
         border-spacing: 0;
         text-align: center;
     }
-    th {
+    body {
         background: #BCEBDD;
         color: white;
         text-shadow: 0 1px 1px #2D2020;
@@ -84,14 +84,27 @@
     tr td:last-child {
         border-right: none;
     }
+    .login {
+        display: inline-block;
+        color: white;
+        font-weight: 700;
+        text-decoration: none;
+        user-select: none;
+        padding: .5em 2em;
+        outline: none;
+        border: 2px solid;
+        border-radius: 1px;
+        transition: 0.2s;
+    }
+    .login:hover { background: rgba(255,255,255,.2); }
+    .login:active { background: white; }
 </style>
 </head>
 <body>
 <header>
     <ul class="groups">
         <h1> Group </h1>
-        <form th:method="search" th:action="@{/groups/search/}">
-            <input  placeholder="search"></form>
+
     </ul>
 </header>
 <table class="table">
@@ -103,8 +116,8 @@
         <th scope="col">Date of finish</th>
         <th scope="col">Courses</th>
         <th scope="col">Students</th>
-        <th scope="col">Delete</th>
         <th scope="col">Update</th>
+        <th scope="col" sec:authorize="hasAuthority('ADMIN')">Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -122,15 +135,16 @@
     </tr>
     </tbody>
 </table>
-<a href="/groups/addGroup"><span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+<a href="/groups/addGroup" sec:authorize="hasAuthority('ADMIN')"><span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
   <button class="btn btn-primary" type="button" disabled>add</button>
 </span></a>
 <p> <a class="hello" href="/groups/hello" > </a > </p>
+<p>  <a class="login" href="/login" >log out </a > </p>
 <section class="header-content">
-    <a class="company" href="/companies"><button  type="button" >Companies</button></a>
+    <a class="company" href="/companies" sec:authorize="hasAuthority('ADMIN')"><button  type="button" >Companies</button></a>
     <a class="course" href="/courses"><button  type="button" >Courses</button></a>
     <a class="student" href="/students"><button  type="button" >Students</button></a>
-    <a class="teacher" href="/teachers"><button  type="button" >Teachers</button></a>
+    <a class="teacher" href="/teachers" sec:authorize="hasAuthority('ADMIN')"><button  type="button" >Teachers</button></a>
     <button th:href="@{/groups/addGroup}" value="ADD" sec:authorize="hasAuthority('ADMIN')" ></button>
     <button th:href="@{/groups/updateGroup}" value="update" sec:authorize="hasAnyAuthority('ADMIN','INSTRUCTOR')" ></button>
 </section>
