--- a/src/main/resources/templates/company/addCompany.html
+++ b/src/main/resources/templates/company/addCompany.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<style>
+  body {
+    background:#477ab9;
+    width:100%;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+  body:hover {
+    background:#3D689C;
+  }
+</style>
 </head>
 <body>
 
