--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -180,7 +180,7 @@
     <form  action="/login" method="post" class="login">
         <div class="user-box">
             <input type="text" name="username" required="">
-            <label>Username</label>
+            <label>Email</label>
         </div>
         <div class="user-box">
             <input type="password" name="password" required="">
