--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,16 +1,109 @@
 <!DOCTYPE html>
-<html lang="en"    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
-      xmlns:th="https://www.thymeleaf.org">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <style>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
 
-  </style>
+
+        body{
+            background-color:#545454;
+            font-family: "Poppins", sans-serif;
+            font-weight: 300;
+        }
+
+        .container{
+            height: 100vh;
+        }
+
+        .card{
+
+            width: 380px;
+            border: none;
+            border-radius: 15px;
+            padding: 8px;
+            background-color: #fff;
+            position: relative;
+            height: 370px;
+        }
+
+        .upper{
+
+            height: 100px;
+
+        }
+
+        .upper img{
+
+            width: 100%;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+
+        }
+
+        .user{
+            position: relative;
+        }
+
+        .profile img{
+
+
+            height: 80px;
+            width: 80px;
+            margin-top:2px;
+
+
+        }
+
+        .profile{
+
+            position: absolute;
+            top:-50px;
+            left: 38%;
+            height: 90px;
+            width: 90px;
+            border:3px solid #fff;
+
+            border-radius: 50%;
+
+        }
+
+
+        .stats span{
+
+            font-size: 29px;
+        }
+    </style>
 </head>
 <body>
-<h1> My profile </h1>
-<button th:href="@{/hello/profile}"  sec:authorize="hasAnyAuthority('ADMIN','INSTRUCTOR','USER')" ></button>
-</body>
+<div class="card">
+
+    <div class="upper">
+
+        <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid">
+
+    </div>
+
+    <div class="user text-center">
+
+        <div class="profile">
+
+            <img src="https://i.imgur.com/JgYD2nQ.jpg" class="rounded-circle" width="80">
+
+        </div>
+
+    </div>
+<div th:object="${user}" class="mt-5 text-center">
+    <h4 th:text="*{id}"></h4>
+    <h4 th:text="*{username}"></h4>
+    <h4 th:text="*{lastName}"></h4>
+    <h4 th:text="*{age}"></h4>
+    <h4 th:text="*{email}"></h4>
+    <h4 sec:authentication="principal.authorities"></h4>
+
+</div></div>
+ </body>
 </html>
+
