--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<style>
-    body {
-        background: aqua;
-        width:100%;
-        -webkit-transition: all 0.4s ease-in-out;
-        -moz-transition: all 0.4s ease-in-out;
-        -ms-transition: all 0.4s ease-in-out;
-        -o-transition: all 0.4s ease-in-out;
-        transition: all 0.4s ease-in-out;
-    }
-    body:hover {
-        background:aqua;
-    }
-</style>
+    <style>
+        body {
+            background: aqua;
+            width:100%;
+            -webkit-transition: all 0.4s ease-in-out;
+            -moz-transition: all 0.4s ease-in-out;
+            -ms-transition: all 0.4s ease-in-out;
+            -o-transition: all 0.4s ease-in-out;
+            transition: all 0.4s ease-in-out;
+        }
+        body:hover {
+            background:aqua;
+        }
+    </style>
 </head>
 <body>
-<h1>Save User</h1>
-<form th:action="@{/users/addUser}"
+<form th:action="@{/users/{id}(id=${user.getId()})}"
       th:method="post"
       th:object="${user}">
     <div class="mb-3">
@@ -37,28 +37,29 @@
         <label for="exampleInputEmail1" class="form-label"></label>
         <input type="text" th:field="*{email}" placeholder="email" class="form-control" id="exampleInputEmail1">
     </div>
-<div class="mb-3">
+    <div class="mb-3">
         <label for="exampleInputage" class="form-label"></label>
         <input type="text" th:field="*{age}" placeholder="age" class="form-control" id="exampleInputage">
     </div>
-<div class="mb-3">
+    <div class="mb-3">
         <label for="exampleInputPassword" class="form-label"></label>
         <input type="text" th:field="*{password}" placeholder="password" class="form-control" id="exampleInputPassword">
     </div>
     <div class="form-button">
-    <input  type="radio" value="ADMIN" th:field="*{roleName}"  id="onlineFormat">
-    <label  for="onlineFormat">ADMIN</label>
-</div>
+        <input  type="radio" value="ADMIN" th:field="*{roleName}"  id="onlineFormat">
+        <label  for="onlineFormat">ADMIN</label>
+    </div>
     <div class="form-button">
         <input  type="radio" value="INSTRUCTOR" th:field="*{roleName}"  id="offlineFormat">
         <label  for="offlineFormat">INSTRUCTOR</label>
     </div>
-<div class="form-button">
+    <div class="form-button">
         <input  type="radio" value="USER" th:field="*{roleName}"  id="UserFormat">
         <label  for="userFormat">USER</label>
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</body>
 </body>
 </html>
