--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,29 +5,133 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<style>
+  .users{
+    font-family: 'Brush Script MT', cursive;
+    background-color: royalblue;
+    padding-left: 600px;
+  }
+  table {
+    background: #f5ffff;
+    border-collapse: collapse;
+    text-align: left;
+  }
+  table th {
+    border-top: 1px solid #777777;
+    border-bottom: 1px solid #777777;
+    box-shadow: inset 0 1px 0 #999999, inset 0 -1px 0 #999999;
+    background: linear-gradient(#9595b6, #5a567f);
+    color: white;
+    padding: 10px 15px;
+    position: relative;
+  }
+  table th:after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 25%;
+    height: 25%;
+    width: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255,255,255,.08));
+  }
+  table tr:nth-child(odd) {
+    background: #ebf3f9;
+  }
+  table th:first-child {
+    border-left: 1px solid #777777;
+    border-bottom: 1px solid #777777;
+    box-shadow: inset 1px 1px 0 #999999, inset 0 -1px 0 #999999;
+  }
+  table th:last-child {
+    border-right: 1px solid #777777;
+    border-bottom: 1px solid #777777;
+    box-shadow: inset -1px 1px 0 #999999, inset 0 -1px 0 #999999;
+  }
+  table td {
+    border: 1px solid #e3eef7;
+    padding: 10px 15px;
+    position: relative;
+    transition: all 0.5s ease;
+  }
+  table tbody:hover td {
+    color: transparent;
+    text-shadow: 0 0 3px #a09f9d;
+  }
+  table tbody:hover tr:hover td {
+    color: #444444;
+    text-shadow: none;
+  }
 
+
+  body{
+    background:linear-gradient(200deg,#a8d7e0,#213b40); /* Цвета градиента */
+    background-size:500% 500%;
+    -webkit-animation:ServiceAnimation 10s ease infinite;
+    -moz-animation:ServiceAnimation 10s ease infinite;
+    -o-animation:ServiceAnimation 10s ease infinite;
+    animation:ServiceAnimation 10s ease infinite; /* Время смены цвета */
+  }
+  @-webkit-keyframes ServiceAnimation{0%
+  {background-position:90% 0}50%
+                             {background-position:10% 100%}100%
+                                                           {background-position:90% 0}
+  }
+  @-moz-keyframes ServiceAnimation{0%
+  {background-position:90% 0}50%
+                             {background-position:10% 100%}100%
+                                                           {background-position:90% 0}
+  }
+  @-o-keyframes ServiceAnimation{0%
+  {background-position:90% 0}50%
+                             {background-position:10% 100%}100%
+                                                           {background-position:90% 0}
+  }
+  @keyframes ServiceAnimation{0%
+  {background-position:90% 0}50%
+                             {background-position:10% 100%}100%
+                                                           {background-position:90% 0}
+  }
+
+</style>
 </head>
 <body>
-<table>
-  <tbody>
+<header>
+  <ul class="users">
+    <h1> Users </h1>
+  </ul>
+</header>
+<table class="table">
+  <thead>
   <tr>
-    <th>id</th>
-    <th>User name</th>
-    <th>Last name</th>
-    <th>age</th>
-    <th>email</th>
-    <th>Role name</th>
+    <th scope="col">id</th>
+    <th scope="col"> user name</th>
+    <th scope="col">Last name</th>
+    <th scope="col">age</th>
+    <th scope="col">email</th>
+    <th scope="col">Role name</th>
+    <th scope="col">Update</th>
+    <th scope="col" >Delete</th>
+
   </tr>
+  </thead>
+  <tbody>
   <tr th:each="user:${users}">
     <td th:text="${user.id}"></td>
     <td th:text="${user.username}"></td>
     <td th:text="${user.lastName}"></td>
     <td th:text="${user.age}"></td>
     <td th:text="${user.email}"></td>
-    <td th:value="*{user.roleName}"></td>
+    <td><a th:href="@{/users/roles/{id}(id=${user.getId()})}">roles</a></td>
+    <td><a th:href="@{/users/update/{id}(id=${user.getId()})}">update</a></td>
+    <td sec:authorize="hasAuthority('ADMIN')">
+      <form th:method="post" th:action="@{/users/delete/{id}(id=${user.getId()})}"
+      ><input  type="submit" value="delete"></form></td>
   </tr>
   </tbody>
-  <a th:href="@{/users/saveUser}" value="ADD" sec:authorize="hasAuthority('ADMIN')" > add users</a>
 </table>
+  <a th:href="@{/users/saveUser}" > <input type="submit" value="ADD" sec:authorize="hasAuthority('ADMIN')" ></a>
+  <a th:href="@{/users/updateUser}" value="ADD" sec:authorize="hasAuthority('ADMIN')" ></a>
+
 </body>
 </html>
