--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -90,7 +90,7 @@
 
         <div class="profile">
 
-            <img src="https://i.imgur.com/JgYD2nQ.jpg" class="rounded-circle" width="80">
+            <img src="https://yandex.ru/images/search?text=%D0%BA%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B5+%D1%84%D0%BE%D1%82%D0%BE+%D0%B4%D0%BB%D1%8F+%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%B8%D1%81%D1%82&pos=13&wp=wh16x9_1366x768&isize=wallpaper&rpt=simage&img_url=http%3A%2F%2Fmartechcube.com%2Fwp-content%2Fuploads%2F2022%2F08%2FInfoTrack.jpg&from=tabbar&lr=10716">
 
         </div>
 
